faq section alignment html & css fix

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,9 @@
     left: 50%;
     position: absolute;
 }
+hr{
+    background-color: #dedee0;
+}
 /* header formatting */
 header{
     width: 100%;
@@ -442,16 +445,18 @@ div.radio-box span {
 .faq-questions h6{
     display: inline-block;
     text-align: left;
-    padding: 20px 0;
     font-size: 14px;
+    vertical-align: middle;
 }
 .faq-questions li{
     width: 100%;
     text-align: left;
+    padding: 30px 0;
 }
 .faq-right,
 .faq-left{
-    display: inline-block;
+    float: left;
+    width: 50%;
 }
 /* faq-left e faq-right non si allineano con width:50%; su entrambi */
 .faq-left{
@@ -459,9 +464,19 @@ div.radio-box span {
 }
 .faq-right{
     text-align: right;
-    width: 50%;
 }
-
+/* .fas-edit:before,
+.fa-chevron-down:before {
+  content: "\f078";
+  text-align: right;
+} */
+.faq-rule{
+    width: 100%;
+}
+.faq-questions ul li:nth-child(even) {
+    padding:0;
+    margin: 0;
+}
 /* footer section */
 footer{
     background-color: black;
